Deleted License and updated README

--- a/README
+++ b/README
@@ -1,18 +1,13 @@
-Welcome to your Appcelerator Titanium Mobile Project
+Welcome to your Eric's Fishing Project 
 
-This is a blank project.  Start by editing your application's app.js to 
-make your first mobile project using Titanium.
+
+This is our first project and will test our basic abilities.
+Although the learning curve is steep if we succeed with this app it'll prove that there
+isn't much we can't tackle.
 
 
 
 ----------------------------------
-Stuff our legal folk make us say:
+Current Team:
 
-Appcelerator, Appcelerator Titanium and associated marks and logos are 
-trademarks of Appcelerator, Inc. 
-
-Titanium is Copyright (c) 2008-2013 by Appcelerator, Inc. All Rights Reserved.
-
-Titanium is licensed under the Apache Public License (Version 2). Please
-see the LICENSE file for the full license.
-
+Eric Mauritzen
